--- a/assets/base.html
+++ b/assets/base.html
@@ -8,11 +8,13 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="index.css" />
+        <script src="jquery.js"></script>
     </head>
 
     <body>
         <div id="groups">
             <input class="search" placeholder="Search" />
+            <input class="search" type="text" placeholder="Search" />
 
             <button class="sort" data-sort="name">
                 Sort by group name
@@ -33,6 +35,7 @@
 
         <script src="http://listjs.com/assets/javascripts/list.min.js"></script>
         <script src="create_list.js" type="text/javascript"></script>
+        <script src="index.js"></script>
     </body>
 </html>
 
