--- a/assets/base.html
+++ b/assets/base.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
 
-<!--
-    {% block date_stamp %}
-    {% endblock date_stamp %}
--->
-
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="index.css" />
@@ -12,6 +7,12 @@
     </head>
 
     <body>
+        <h1>List of Google Groups</h1>
+        <p>
+            {% block date_stamp %}
+            {% endblock date_stamp %}
+        </p>
+        <p>Click on a group name or owner name to send an email</p>
         <div id="groups">
             <input class="search" type="text" placeholder="Search" />
 
@@ -24,15 +25,33 @@
             </button>
 
             <table>
-                <!-- IMPORTANT, class="list" have to be at tbody -->
                 <tbody class="list">
+                    <tr>
+                        <th>Group Name</th>
+                        <th>Group Email</th>
+                        <th>Group Owner</th>
+                    </tr>
                     {% block content_block %}
                     {% endblock content_block %}
                 </tbody>
             </table>
         </div>
 
-        <script src="http://listjs.com/assets/javascripts/list.min.js"></script>
+
+        <script src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js"></script>
+        <script>
+            // Initialize Firebase
+            var config = {
+                apiKey: "AIzaSyD36O0XwlfPwKybfey3nqT89rEZfGi3Er8",
+                authDomain: "project--5562123628270244026.firebaseapp.com",
+                databaseURL: "https://project--5562123628270244026.firebaseio.com",
+                storageBucket: "project--5562123628270244026.appspot.com",
+                messagingSenderId: "385979637337"
+            };
+            firebase.initializeApp(config);
+        </script>
+
+        <script src="list.min.js" type="text/javascript"></script>
         <script src="create_list.js" type="text/javascript"></script>
         <script src="index.js"></script>
     </body>
